Adding a couple of functions for preprocessing and tokenisation.

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -1768,53 +1768,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "beca10af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "88946ffb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = Path(Path.cwd() / \"pickles\" / \"speeches.pkl\")\n",
-    "df = pd.read_pickle(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "17aa9a3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gensim.utils import simple_preprocess\n",
-    "def list_to_str(lst):\n",
-    "    ''' take a list of words or Spacy tokens and return a single joined string ''' \n",
-    "    if lst and isinstance(lst[0], spacy.tokens.span.Span):\n",
-    "        return ' '.join([x.text for x in lst])\n",
-    "    elif lst and isinstance(lst[0], str):\n",
-    "        return ' '.join([x for x in lst])\n",
-    "    else:\n",
-    "        print('provide list of spaCy spans or string')\n",
-    "\n",
-    "def gensim_simple(doc):\n",
-    "        doc = doc.text        \n",
-    "        return list_to_str(simple_preprocess(doc))\n",
-    "\n",
-    "\n",
-    "\n",
-    "df['speech_pp']= df['docs'].apply(lambda x: gensim_simple(x))\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "07271048",
    "metadata": {},
@@ -1834,7 +1787,10 @@
     "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import f1_score,  classification_report\n",
-    "from sklearn import svm"
+    "from sklearn import svm\n",
+    "from pathlib import Path\n",
+    "path = Path(Path.cwd() / \"pickles\" / \"speeches.pkl\")\n",
+    "df = pd.read_pickle(path)\n"
    ]
   },
   {
@@ -2045,39 +2001,63 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b28702d7",
+   "id": "a322d7c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df['docs'] = df['speech'].apply(lambda x: nlp(x))\n",
-    "path = os.path.join('pickles', 'speeches.pkl')\n"
+    "import pandas as pd\n",
+    "# path = os.path.join('pickles', 'speeches.pkl')\n",
+    "# df.to_pickle(path) # saving to pickle it doesn't require parsing every load (~15m)\n",
+    "# df = pd.read_pickle(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "b28702d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#* RandomForest (with n_estimators=300) \n",
+    "#* SVM Linear\n",
+    "\n",
+    "#* Adjust the parameters of the Tfidfvectorizer\n",
+    "# * so that unigrams, bi-grams and tri-grams \n",
+    "# *will be considered as features, limiting the\n",
+    "# * total number of features to 3000. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "493c56c0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# df.to_pickle(path) # saving to pickle it doesn't require parsing every load (~15m)\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m path = \u001b[43mos\u001b[49m.path.join(\u001b[33m'\u001b[39m\u001b[33mpickles\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mspeeches.pkl\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      5\u001b[39m df = pd.read_pickle(path)\n\u001b[32m      6\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mdocs\u001b[39m\u001b[33m'\u001b[39m][-\u001b[32m5\u001b[39m:]\n",
-      "\u001b[31mNameError\u001b[39m: name 'os' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# df.to_pickle(path) # saving to pickle it doesn't require parsing every load (~15m)\n",
-    "import pandas as pd\n",
-    "path = os.path.join('pickles', 'speeches.pkl')\n",
+    "from gensim.utils import simple_preprocess\n",
     "\n",
-    "df = pd.read_pickle(path)\n",
-    "df['docs'][-5:]\n"
+    "\n",
+    "def list_to_str(lst):\n",
+    "    ''' take a list of words or Spacy tokens and return a single joined string ''' \n",
+    "    if lst and isinstance(lst[0], spacy.tokens.span.Span):\n",
+    "        return ' '.join([x.text for x in lst])\n",
+    "    elif lst and isinstance(lst[0], str):\n",
+    "        return ' '.join([x for x in lst])\n",
+    "    else:\n",
+    "        print('provide list of spaCy spans or string')\n",
+    "\n",
+    "def gensim_simple(doc, as_list=False):\n",
+    "        doc = doc.text    \n",
+    "        if as_list:\n",
+    "            return list_to_str(simple_preprocess(doc))\n",
+    "        else:\n",
+    "            return simple_preprocess(doc)    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "df['speech_pp']= df['docs'].apply(lambda x: gensim_simple(x))\n"
    ]
   },
   {
