FK score text answer

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b9ed11f3",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e8c1eb6e",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 4,
    "id": "b097f9fc",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "id": "aeaacaba",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
     "# y = ['aaaa', 'maaattaan']\n",
     "# z = x+y\n",
     "# print(list(zip(z,[count_syl(i, d) for i in z])))\n",
-    "# print(sum([count_syl(word, d) for word in z]))"
+    "# print(sum([count_syl(word, d) for word in z]))\n"
    ]
   },
   {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 5,
    "id": "f4017d55",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
    "id": "3762e657",
    "metadata": {},
    "source": [
-    "## d) flesch_kincaid **todo**\n",
+    "## d) flesch_kincaid\n",
     "When is the Flesch Kincaid score *not* a valid, robust or reliable estimator of text difficulty? Give two conditions. (Text answer, 200 words maximum)."
    ]
   },
@@ -363,7 +363,34 @@
    "id": "6fc5402b",
    "metadata": {},
    "source": [
-    "1) Anachronistic terminology which is no longer part of the modern vernacular of a language may appear simple (in terms of the syllable to word ration), but would cause a misleading scoring of the complexity of a text."
+    "\n",
+    "\n",
+    "Lingustic differences of a vocabulary are not represented by the F-K score. For example, anachronistic terminology which is no longer part of the modern vernacular may appear mechanistically simple (in terms of the syllable to word ration), but would cause a misleading scoring of the complexity of a text. Example, Chaucer's middle English:\n",
+    "“Whan that Aprill with his shoures soote/The droghte of March hath perced to the roote” (1)\n",
+    "does not represent modern vernacular, and yet the syllable count and text length would deem its readibility relatively simple ($\\approx$ 6th-7th grade, 11-13 years old).\n",
+    "\n",
+    "  \n",
+    "\n",
+    "Contextual understanding from word order or the organisation of the content is not factored into F-K scores (2). Scoring based on frequencies and ratios omits reader comprehension, contextual awareness and cultural understanding such as those for whom English as a second language (EFL). The score is based on the structure of English, and which is not constant across language roots.\n",
+    "\n",
+    "Example: The verb shift to the end of the sentence in German for past tense, while syntax is comparible for present tense.\n",
+    "\n",
+    "|         | German                            | English                   |\n",
+    "| ------- | --------------------------------- | ------------------------- |\n",
+    "| Past    | Ich habe einen Apfel **gegessen** | I **ate** an apple        |\n",
+    "| Present | Ich **esse** einen Apfel”         | I **am eating** an apple. |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b8b002a",
+   "metadata": {},
+   "source": [
+    "References\n",
+    "  \n",
+    "\n",
+    "1) Canterbury Tales: General Prologue ll. 1-2, [source]([https://chaucer.fas.harvard.edu/pages/general-prologue-0](https://chaucer.fas.harvard.edu/pages/general-prologue-0)) accessed: 2025-06-18\n",
+    "2) Redish, Janice. (2000). Readability formulas have even more limitations than Klare discusses. ACM Journal of Computer Documentation. 24. 132-137, pg. 134. DOI: 10.1145/344599.344637."
    ]
   },
   {
@@ -2030,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "id": "493c56c0",
    "metadata": {},
    "outputs": [],
@@ -2048,7 +2075,10 @@
     "        print('provide list of spaCy spans or string')\n",
     "\n",
     "def gensim_simple(doc, as_list=False):\n",
+    "    if isinstance(doc[0], spacy.tokens.span.Span):\n",
     "        doc = doc.text    \n",
+    "    else:\n",
+    "        doc=doc\n",
     "        if as_list:\n",
     "            return list_to_str(simple_preprocess(doc))\n",
     "        else:\n",
@@ -2057,7 +2087,7 @@
     "\n",
     "\n",
     "\n",
-    "df['speech_pp']= df['docs'].apply(lambda x: gensim_simple(x))\n"
+    "# df['speech_pp']= df['docs'].apply(lambda x: gensim_simple(x))"
    ]
   },
   {
