Adding some docstrings, and tweaks to text answer for FK score to meet wordcount. Rerunning some checks on functions

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b9ed11f3",
    "metadata": {},
    "outputs": [],
@@ -85,10 +85,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e8c1eb6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text_c</th>\n",
+       "      <th>text</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\\nCHAPTER 1\\n\\nThe family of Dashwood had long...</td>\n",
+       "      <td>The family of Dashwood had long been settled i...</td>\n",
+       "      <td>Sense_and_Sensibility</td>\n",
+       "      <td>Austen</td>\n",
+       "      <td>1811</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              text_c  \\\n",
+       "0  \\nCHAPTER 1\\n\\nThe family of Dashwood had long...   \n",
+       "\n",
+       "                                                text                  title  \\\n",
+       "0  The family of Dashwood had long been settled i...  Sense_and_Sensibility   \n",
+       "\n",
+       "   author  year  \n",
+       "0  Austen  1811  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def read_file(filename):\n",
     "    with open(filename, 'r') as f:\n",
@@ -119,6 +176,9 @@
     "        file_dict['year'] = year[:-4]\n",
     "        df_data.append(file_dict)\n",
     "    df = pd.DataFrame(df_data)\n",
+    "    ''' NOTE: I have opted to retain the original text as a copy, and have applied some cleaning to the documents\n",
+    "    Cleaned text is applied to column \"text\"\n",
+    "    '''\n",
     "    df['text_c'] = df['text'].copy() # retain original copy\n",
     "    mask = df['title'] == 'The_Black_Moth'\n",
     "    ind = df[mask].index[0]\n",
@@ -144,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "id": "1d77ee3b",
    "metadata": {},
    "outputs": [
@@ -174,7 +234,7 @@
    "source": [
     "def nltk_ttr(text):\n",
     "    \"\"\"Calculates the type-token ratio of a text. Text is tokenized using nltk.word_tokenize.\"\"\"\n",
-    "    text_cleaned = [t.lower() for t in word_tokenize(text) if t.isalnum()] # I've assumed that we want the numbers, as well as text.\n",
+    "    text_cleaned = [t.lower() for t in word_tokenize(text) if t.isalnum()] # I've assumed that we want the numbers, as well as text, as the question didn't state to exclude these.\n",
     "    vocab = set(text_cleaned) # dedupe words\n",
     "    ttr = len(vocab) / len(text_cleaned) # ratio words to the text\n",
     "    return ttr\n",
@@ -303,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f4017d55",
    "metadata": {},
    "outputs": [],
@@ -346,7 +406,8 @@
     "    temp = pd.DataFrame({'title_f': fks.keys(), 'fks':fks.values()})\n",
     "    df = df.merge(temp, left_on='title', right_on='title_f')\n",
     "    return df.drop(columns='title_f')\n",
-    "df = add_fks_to_df(df)\n"
+    "fks_dict = get_fks(df) # return dictionary mapping\n",
+    "df = add_fks_to_df(df) # add to df"
    ]
   },
   {
@@ -363,22 +424,18 @@
    "id": "6fc5402b",
    "metadata": {},
    "source": [
+    "**Etymology**: Lingustic differences of a vocabulary are not represented by the FKS. For example, anachronistic terminology which is no longer part of the modern vernacular are mechanistically oversimplified (the syllable to word ration); FKS would be misleading when scoring of the complexity of a text. Example - Chaucer's middle English:\n",
+    "“Whan that Aprill with his shoures soote/The droghte of March hath perced to the roote” (1).\n",
+    "does not represent modern vernacular, and yet the syllable count and text length would deem its readibility as $\\approx$ 6th-7th grade/ 11-13 years old.\n",
     "\n",
+    "**Context**: comprehension gained from word order or the organisation of the content is not factored into FKS (2). Scoring based on frequencies and ratios omits reader comprehension, contextual awareness and cultural understanding. Those for whom English as a second language, FKS is not robust, being based on the structure of English, and structures are not constant across language roots.\n",
     "\n",
-    "Lingustic differences of a vocabulary are not represented by the F-K score. For example, anachronistic terminology which is no longer part of the modern vernacular may appear mechanistically simple (in terms of the syllable to word ration), but would cause a misleading scoring of the complexity of a text. Example, Chaucer's middle English:\n",
-    "“Whan that Aprill with his shoures soote/The droghte of March hath perced to the roote” (1)\n",
-    "does not represent modern vernacular, and yet the syllable count and text length would deem its readibility relatively simple ($\\approx$ 6th-7th grade, 11-13 years old).\n",
-    "\n",
-    "  \n",
-    "\n",
-    "Contextual understanding from word order or the organisation of the content is not factored into F-K scores (2). Scoring based on frequencies and ratios omits reader comprehension, contextual awareness and cultural understanding such as those for whom English as a second language (EFL). The score is based on the structure of English, and which is not constant across language roots.\n",
-    "\n",
-    "Example: The verb shift to the end of the sentence in German for past tense, while syntax is comparible for present tense.\n",
+    "Example - Unreliable structure with verb past tense, while syntax is comparible for present tense; different structures added complexity for comprehension.\n",
     "\n",
     "|         | German                            | English                   |\n",
     "| ------- | --------------------------------- | ------------------------- |\n",
     "| Past    | Ich habe einen Apfel **gegessen** | I **ate** an apple        |\n",
-    "| Present | Ich **esse** einen Apfel”         | I **am eating** an apple. |"
+    "| Present | Ich **esse** einen Apfel        | I **am eating** an apple. |"
    ]
   },
   {
@@ -424,16 +481,91 @@
     "        # print(f\"Document {i+1} / {len(df)} parsed.\") #? added to see process when parsing (takes a while)\n",
     "    df['docs'] = docs.values()\n",
     "    df.to_pickle(os.path.join(store_path,out_name)) #~ write to pickle\n",
+    "    ''' The question requested the df is returned - I have commented out this return, to purely save, as we load in the next step from pickle '''\n",
     "    # return df #^ To check the returned df\n",
     "parse(df) #^ function call to parse and save df to pickle\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a0a63e52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text_c</th>\n",
+       "      <th>text</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>year</th>\n",
+       "      <th>fks</th>\n",
+       "      <th>docs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\\nCHAPTER 1\\n\\nThe family of Dashwood had long...</td>\n",
+       "      <td>The family of Dashwood had long been settled i...</td>\n",
+       "      <td>Sense_and_Sensibility</td>\n",
+       "      <td>Austen</td>\n",
+       "      <td>1811</td>\n",
+       "      <td>10.8845</td>\n",
+       "      <td>(The, family, of, Dashwood, had, long, been, s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>'Wooed and married and a'.'\\n'Edith!' said Mar...</td>\n",
+       "      <td>'Wooed and married and a'.'\\n'Edith!' said Mar...</td>\n",
+       "      <td>North_and_South</td>\n",
+       "      <td>Gaskell</td>\n",
+       "      <td>1855</td>\n",
+       "      <td>6.6544</td>\n",
+       "      <td>(', Wooed, and, married, and, a, ', ., ', \\n, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              text_c  \\\n",
+       "0  \\nCHAPTER 1\\n\\nThe family of Dashwood had long...   \n",
+       "1  'Wooed and married and a'.'\\n'Edith!' said Mar...   \n",
+       "\n",
+       "                                                text                  title  \\\n",
+       "0  The family of Dashwood had long been settled i...  Sense_and_Sensibility   \n",
+       "1  'Wooed and married and a'.'\\n'Edith!' said Mar...        North_and_South   \n",
+       "\n",
+       "    author  year      fks                                               docs  \n",
+       "0   Austen  1811  10.8845  (The, family, of, Dashwood, had, long, been, s...  \n",
+       "1  Gaskell  1855   6.6544  (', Wooed, and, married, and, a, ', ., ', \\n, ...  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def load_from_pickle(store_path=Path.cwd() / \"pickles\", out_name=\"parsed.pickle\"):\n",
     "    df = pd.read_pickle(os.path.join(store_path, out_name))\n",
