Creating a function for the first tfidf with train and test splits

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "1d77ee3b",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        " 'Blood_Meridian': 0.08570454932697223}"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,27 +696,22 @@
     "    \"\"\"Extracts the most common adjectives in a parsed document. Returns a list of tuples.\"\"\"\n",
     "    pos_counts = Counter([token.text for token in doc if token.pos_ == 'ADJ'])\n",
     "    return pos_counts.most_common()[:n]\n",
-    "    \n",
+    "\n",
+    "''' Adjective Counts '''\n",
     "# doc = df['docs'][len(df)-1] #*to test function with a sample doc\n",
-    "# adjective_counts(doc)"
+    "# df['docs'].apply(lambda x: adjective_counts(x)) # if you want to count adjectives for whole df\n",
+    "\n",
+    "''' Manual test '''\n",
+    "# adj_counts= Counter([token.text for token in doc if token.pos_ == 'ADJ'])\n",
+    "# adj_counts.most_common()[:10]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 11,
    "id": "1afa9053",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'- i. The title of each novel and a list of the ten most common syntactic objects overall in the text. '"
-      ]
-     },
-     "execution_count": 504,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -759,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 30,
    "id": "bb8c2cda",
    "metadata": {},
    "outputs": [],
@@ -831,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "1c8537ea",
    "metadata": {},
    "outputs": [
@@ -864,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "18c1c684",
    "metadata": {},
    "outputs": [],
@@ -925,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "28a88798",
    "metadata": {},
    "outputs": [
@@ -1773,6 +1768,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pprint import pprint\n",
+    "''' Adding pprint for better dictionary output '''\n",
     "if __name__ == \"__main__\":\n",
     "    \"\"\" uncomment the following lines to run the functions once you have completed them\"\"\"\n",
     "    # path = Path.cwd() / \"p1-texts\" / \"novels\"\n",
@@ -1782,12 +1779,12 @@
     "    #nltk.download(\"cmudict\")\n",
     "    #parse(df)\n",
     "    # print(df.head()[0:2])\n",
-    "    #print(get_ttrs(df))\n",
-    "    #print(get_fks(df))\n",
+    "    # pprint(get_ttrs(df))\n",
+    "    # pprint(get_fks(df))\n",
     "    # df = pd.read_pickle(Path.cwd() / \"pickles\" /\"name.pickle\")\n",
     "\n",
-    "    # for i in range(len(df)):\n",
-    "    #     print(df['title'][i], ': ',adjective_counts(df['docs'][i]),'\\n') #? this is using the dataframe, the function and docstring calls for a `doc` object.\n",
+    "    # for i, row in df.iterrows():\n",
+    "    #     print(row['title'], ': ',adjective_counts(row['docs']),'\\n') #? this is using the dataframe, the function and docstring calls for a `doc` object.\n",
     "   \n",
     "    # for i, row in df.iterrows():\n",
     "    #     print(row[\"title\"])\n",
@@ -1855,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "9b39de8e",
    "metadata": {},
    "outputs": [],
@@ -1937,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "58d0c252",
    "metadata": {},
    "outputs": [],
@@ -1954,18 +1951,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "bc6f06ec",
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' Stratify \"If not None, data is split in a stratified fashion, using this as the class labels.\"\n",
+    "source: https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html\n",
+    "'''\n",
     "\n",
-    "random_seed = 26\n",
-    "max_features = 3000\n",
+    "def establish_tfidf_xy(x, y, **kwargs):\n",
+    "    tfidf_vectorizer = TfidfVectorizer(stop_words=eskw['stop_words'],max_features=eskw['max_features'])\n",
+    "    tfidf = tfidf_vectorizer.fit_transform(x) \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(tfidf, y, random_state=eskw['random_state'], shuffle=eskw['shuffle'], stratify=y)\n",
+    "    return X_train, X_test, y_train, y_test \n",
+    "x = df.speech\n",
+    "y = df.party\n",
     "\n",
-    "tfidf_vectorizer = TfidfVectorizer(stop_words=\"english\",max_features=max_features)\n",
-    "tfidf = tfidf_vectorizer.fit_transform(df.speech) \n",
-    "X_train, X_test, y_train, y_test = train_test_split(tfidf, df.party, random_state=random_seed, shuffle=True, stratify=df.party)"
+    "eskw={\n",
+    "    'stop_words':\"english\",\n",
+    "    'max_features': 3000,\n",
+    "    'random_state':26,\n",
+    "    'shuffle': True,\n",
+    "    'stratify':y\n",
+    "    }\n",
+    "\n",
+    "X_train, X_test, y_train, y_test  = establish_tfidf_xy(x, y, **eskw)"
    ]
   },
   {
