Creating Random Forest function for 2c)

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "id": "bc6f06ec",
    "metadata": {},
    "outputs": [],
@@ -1963,8 +1963,7 @@
     "def establish_tfidf_xy(x, y, **kwargs):\n",
     "    tfidf_vectorizer = TfidfVectorizer(stop_words=eskw['stop_words'],max_features=eskw['max_features'])\n",
     "    tfidf = tfidf_vectorizer.fit_transform(x) \n",
-    "    X_train, X_test, y_train, y_test = train_test_split(tfidf, y, random_state=eskw['random_state'], shuffle=eskw['shuffle'], stratify=y)\n",
-    "    return X_train, X_test, y_train, y_test \n",
+    "    return train_test_split(tfidf, y, random_state=eskw['random_state'], shuffle=eskw['shuffle'], stratify=y)\n",
     "x = df.speech\n",
     "y = df.party\n",
     "\n",
@@ -1985,7 +1984,12 @@
    "metadata": {},
    "source": [
     "## c) Random forest and SVM\n",
-    "Train RandomForest (with n_estimators=300) and SVM with linear kernel classifiers on the training set, and print the scikit-learn macro-average f1 score and classification report for each classifier on the test set. The label that you are trying to predict is the ‘party’ value. "
+    "Train **RandomForest** (with n_estimators=300) and **SVM** with linear kernel classifiers on the training set, and print \n",
+    "\n",
+    "- the scikit-learn macro-average f1 score and\n",
+    "- classification report for each classifier on the test set.\n",
+    "\n",
+    "The label that you are trying to predict is the ‘party’ value. "
    ]
   },
   {
@@ -2000,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "af3f7103",
    "metadata": {},
    "outputs": [
@@ -2008,30 +2012,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.44126993575550516\n",
+      "0.41602579391312\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.73      0.98      0.83      1205\n",
-      "                 Labour       0.72      0.44      0.55       579\n",
-      "       Liberal Democrat       1.00      0.01      0.03        67\n",
-      "Scottish National Party       0.84      0.22      0.35       170\n",
+      "           Conservative       0.72      0.95      0.82      1205\n",
+      "                 Labour       0.68      0.44      0.53       579\n",
+      "       Liberal Democrat       0.00      0.00      0.00        67\n",
+      "Scottish National Party       0.72      0.20      0.31       170\n",
       "\n",
-      "               accuracy                           0.73      2021\n",
-      "              macro avg       0.82      0.41      0.44      2021\n",
-      "           weighted avg       0.74      0.73      0.68      2021\n",
+      "               accuracy                           0.71      2021\n",
+      "              macro avg       0.53      0.40      0.42      2021\n",
+      "           weighted avg       0.68      0.71      0.67      2021\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "rfc = RandomForestClassifier(random_state=random_seed)\n",
-    "n_estimators = 300\n",
+    "def random_forest(X_train, y_train, X_test, y_test, **kwargs):\n",
+    "    rfc = RandomForestClassifier(\n",
+    "        n_estimators = rfkw['n_estimators'],\n",
+    "        random_state = rfkw['random_state'])\n",
     "\n",
-    "rfc_fitted = rfc.fit(X_train, y_train)\n",
+    "    rfc_fitted = rfc.fit(X_train, y_train)\n",
     "\n",
-    "print(f1_score(y_test, rfc_fitted.predict(X_test), average='macro'))\n",
-    "# params (y_true, y_predicted)\n",
-    "print(classification_report(y_test, rfc.predict(X_test)))"
+    "    print(f1_score(y_test, rfc_fitted.predict(X_test), average=rfkw['average']))\n",
+    "    # params (y_true, y_predicted)\n",
+    "    print(classification_report(y_test, rfc.predict(X_test)))\n",
+    "\n",
+    "rfkw = {\n",
+    "    'random_state':26,\n",
+    "    'n_estimators' : 30, \n",
+    "    'average': 'macro'\n",
+    "}\n",
+    "\n",
+    "random_forest(X_train, y_train, X_test, y_test, **rfkw)"
    ]
   },
   {
