--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -1852,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "id": "9b39de8e",
    "metadata": {},
    "outputs": [],
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a990e312",
    "metadata": {},
    "outputs": [],
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "49eb3912",
    "metadata": {},
    "outputs": [
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "58d0c252",
    "metadata": {},
    "outputs": [],
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "bc6f06ec",
    "metadata": {},
    "outputs": [],
@@ -1960,22 +1960,50 @@
     "source: https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html\n",
     "'''\n",
     "\n",
-    "def establish_tfidf_xy(x, y, **kwargs):\n",
-    "    tfidf_vectorizer = TfidfVectorizer(stop_words=eskw['stop_words'],max_features=eskw['max_features'])\n",
-    "    tfidf = tfidf_vectorizer.fit_transform(x) \n",
-    "    return train_test_split(tfidf, y, random_state=eskw['random_state'], shuffle=eskw['shuffle'], stratify=y)\n",
+    "# def establish_tfidf_xy(x, y, **kwargs):\n",
+    "#     tfidf_vectorizer = TfidfVectorizer(stop_words=kwargs['stop_words'],max_features=kwargs['max_features'])\n",
+    "#     tfidf = tfidf_vectorizer.fit_transform(x) \n",
+    "#     return train_test_split(tfidf, y, random_state=kwargs['random_state'], shuffle=kwargs['shuffle'], stratify=y)\n",
+    "\n",
+    "def establish_tfidf(texts, **kwargs):\n",
+    "    ''' Pass texts without labels and kwargs for the TfidfVectorizer '''\n",
+    "    tfidf_vectorizer = TfidfVectorizer(**kwargs)\n",
+    "    return tfidf_vectorizer.fit_transform(texts) \n",
+    "\n",
+    "def establish_split(vectorised, **kwargs):\n",
+    "    ''' Pass vectorised dataset and kwargs for sample split '''\n",
+    "    return train_test_split(vectorised, y, **kwargs)\n",
+    "\n",
+    "# x = df.speech\n",
+    "# y = df.party\n",
+    "\n",
+    "# es_kw={\n",
+    "#     'stop_words':\"english\",\n",
+    "#     'max_features': 3000,\n",
+    "#     'random_state':26,\n",
+    "#     'shuffle': True,\n",
+    "#     'stratify':y\n",
+    "#     }\n",
+    "\n",
+    "# X_train, X_test, y_train, y_test  = establish_tfidf_xy(x, y, **eskw)\n",
+    "\n",
     "x = df.speech\n",
     "y = df.party\n",
     "\n",
-    "eskw={\n",
+    "vec_kw={\n",
     "    'stop_words':\"english\",\n",
     "    'max_features': 3000,\n",
+    "    }\n",
+    "\n",
+    "tts_kw = {\n",
     "    'random_state':26,\n",
     "    'shuffle': True,\n",
     "    'stratify':y\n",
-    "    }\n",
+    "}\n",
+    "    \n",
     "\n",
-    "X_train, X_test, y_train, y_test  = establish_tfidf_xy(x, y, **eskw)"
+    "\n",
+    "X_train, X_test, y_train, y_test = establish_split(establish_tfidf(x, **vec_kw), **tts_kw) "
    ]
   },
   {
@@ -2004,53 +2032,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "af3f7103",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.41602579391312\n",
-      "                         precision    recall  f1-score   support\n",
-      "\n",
-      "           Conservative       0.72      0.95      0.82      1205\n",
-      "                 Labour       0.68      0.44      0.53       579\n",
-      "       Liberal Democrat       0.00      0.00      0.00        67\n",
-      "Scottish National Party       0.72      0.20      0.31       170\n",
-      "\n",
-      "               accuracy                           0.71      2021\n",
-      "              macro avg       0.53      0.40      0.42      2021\n",
-      "           weighted avg       0.68      0.71      0.67      2021\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def random_forest(X_train, y_train, X_test, y_test, **kwargs):\n",
-    "    rfc = RandomForestClassifier(\n",
-    "        n_estimators = rfkw['n_estimators'],\n",
-    "        random_state = rfkw['random_state'])\n",
+    "def random_forest(X_train, y_train, X_test, y_test, average,**kwargs):\n",
+    "    rfc = RandomForestClassifier(**kwargs)\n",
     "\n",
     "    rfc_fitted = rfc.fit(X_train, y_train)\n",
     "\n",
-    "    print(f1_score(y_test, rfc_fitted.predict(X_test), average=rfkw['average']))\n",
+    "    print(f1_score(y_test, rfc_fitted.predict(X_test), average=average))\n",
     "    # params (y_true, y_predicted)\n",
     "    print(classification_report(y_test, rfc.predict(X_test)))\n",
     "\n",
     "rfkw = {\n",
     "    'random_state':26,\n",
-    "    'n_estimators' : 30, \n",
-    "    'average': 'macro'\n",
+    "    'n_estimators' : 300, \n",
     "}\n",
+    "    # 'average': 'macro'\n",
     "\n",
-    "random_forest(X_train, y_train, X_test, y_test, **rfkw)"
+    "random_forest(X_train, y_train, X_test, y_test, average='macro', **rfkw)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 91,
    "id": "da9ee15c",
    "metadata": {},
    "outputs": [
@@ -2058,28 +2065,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5846137591595653\n",
+      "0.5741880652063533\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.82      0.92      0.87      1205\n",
-      "                 Labour       0.72      0.68      0.70       579\n",
-      "       Liberal Democrat       0.83      0.07      0.14        67\n",
-      "Scottish National Party       0.78      0.53      0.63       170\n",
+      "           Conservative       0.83      0.92      0.87      1205\n",
+      "                 Labour       0.73      0.72      0.73       579\n",
+      "       Liberal Democrat       1.00      0.03      0.06        67\n",
+      "Scottish National Party       0.78      0.55      0.64       170\n",
       "\n",
-      "               accuracy                           0.79      2021\n",
-      "              macro avg       0.79      0.55      0.58      2021\n",
-      "           weighted avg       0.79      0.79      0.78      2021\n",
+      "               accuracy                           0.80      2021\n",
+      "              macro avg       0.83      0.55      0.57      2021\n",
+      "           weighted avg       0.80      0.80      0.78      2021\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "linear_svc = svm.SVC(kernel='linear')\n",
-    "linear_svc_fitted = linear_svc.fit(X_train, y_train)\n",
-    "linear_svc_fitted.predict(X_test)\n",
+    "def svm_cl(X_train, y_train, X_test, y_test,average, **kwargs):\n",
+    "    linear_svc = svm.SVC(**kwargs)\n",
+    "    linear_svc_fitted = linear_svc.fit(X_train, y_train)\n",
+    "    linear_svc_fitted.predict(X_test)\n",
+    "    \n",
+    "    print(f1_score(y_test, linear_svc.predict(X_test), average=average))\n",
+    "    print(classification_report(y_test, linear_svc_fitted.predict(X_test)))\n",
     "\n",
-    "print(f1_score(y_test, linear_svc.predict(X_test), average='macro'))\n",
-    "print(classification_report(y_test, linear_svc_fitted.predict(X_test)))"
+    "svmkw = {\n",
+    "    'kernel': 'linear',\n",
+    "    'random_state':26,\n",
+    "}\n",
+    "    # 'average': 'macro' \n",
+    "svm_cl(X_train, y_train, X_test, y_test, average='macro',**svmkw)"
    ]
   },
   {
@@ -2093,49 +2108,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e79fe8ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "random_seed = 26\n",
-    "max_features = 3000\n",
-    "n_gram_size = (1,3)\n",
+    "x = df.speech\n",
+    "y = df.party\n",
     "\n",
-    "gram_tfidf_vectorizer = TfidfVectorizer(stop_words=\"english\",max_features=max_features, ngram_range=n_gram_size)\n",
-    "gram_tfidf = gram_tfidf_vectorizer.fit_transform(df.speech) \n",
-    "X_train, X_test, y_train, y_test = train_test_split(gram_tfidf, df.party, random_state=random_seed, shuffle=True, stratify=df.party)"
+    "vec_kw={\n",
+    "    'stop_words':\"english\",\n",
+    "    'max_features': 3000,\n",
+    "    'ngram_range' : (1,3)\n",
+    "    }\n",
+    "\n",
+    "tts_kw = {\n",
+    "    'random_state':26,\n",
+    "    'shuffle': True,\n",
+    "    'stratify':y\n",
+    "}\n",
+    "    \n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = establish_split(establish_tfidf(x, **vec_kw), **tts_kw) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "60a95366",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4752492885692674\n",
-      "                         precision    recall  f1-score   support\n",
-      "\n",
-      "           Conservative       0.73      0.97      0.83      1205\n",
-      "                 Labour       0.76      0.46      0.57       579\n",
-      "       Liberal Democrat       0.00      0.00      0.00        67\n",
-      "Scottish National Party       0.82      0.35      0.49       170\n",
-      "\n",
-      "               accuracy                           0.74      2021\n",
-      "              macro avg       0.58      0.45      0.48      2021\n",
-      "           weighted avg       0.72      0.74      0.70      2021\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'rfc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[87]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m rfc_fitted = \u001b[43mrfc\u001b[49m.fit(X_train, y_train)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(f1_score(y_test, rfc_fitted.predict(X_test), average=\u001b[33m'\u001b[39m\u001b[33mmacro\u001b[39m\u001b[33m'\u001b[39m))\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(classification_report(y_test, rfc.predict(X_test)))\n",
+      "\u001b[31mNameError\u001b[39m: name 'rfc' is not defined"
      ]
     }
    ],
    "source": [
-    "rfc_fitted = rfc.fit(X_train, y_train)\n",
     "\n",
+    "rfc_fitted = rfc.fit(X_train, y_train)\n",
     "print(f1_score(y_test, rfc_fitted.predict(X_test), average='macro'))\n",
     "print(classification_report(y_test, rfc.predict(X_test)))"
    ]
