--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bc6f06ec",
    "metadata": {},
    "outputs": [],
@@ -1960,11 +1960,6 @@
     "source: https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html\n",
     "'''\n",
     "\n",
-    "# def establish_tfidf_xy(x, y, **kwargs):\n",
-    "#     tfidf_vectorizer = TfidfVectorizer(stop_words=kwargs['stop_words'],max_features=kwargs['max_features'])\n",
-    "#     tfidf = tfidf_vectorizer.fit_transform(x) \n",
-    "#     return train_test_split(tfidf, y, random_state=kwargs['random_state'], shuffle=kwargs['shuffle'], stratify=y)\n",
-    "\n",
     "def establish_tfidf(texts, **kwargs):\n",
     "    ''' Pass texts without labels and kwargs for the TfidfVectorizer '''\n",
     "    tfidf_vectorizer = TfidfVectorizer(**kwargs)\n",
@@ -1972,20 +1967,16 @@
     "\n",
     "def establish_split(vectorised, **kwargs):\n",
     "    ''' Pass vectorised dataset and kwargs for sample split '''\n",
-    "    return train_test_split(vectorised, y, **kwargs)\n",
-    "\n",
-    "# x = df.speech\n",
-    "# y = df.party\n",
-    "\n",
-    "# es_kw={\n",
-    "#     'stop_words':\"english\",\n",
-    "#     'max_features': 3000,\n",
-    "#     'random_state':26,\n",
-    "#     'shuffle': True,\n",
-    "#     'stratify':y\n",
-    "#     }\n",
-    "\n",
-    "# X_train, X_test, y_train, y_test  = establish_tfidf_xy(x, y, **eskw)\n",
+    "    return train_test_split(vectorised, y, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9789e13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "x = df.speech\n",
     "y = df.party\n",
@@ -2001,7 +1992,6 @@
     "    'stratify':y\n",
     "}\n",
     "    \n",
-    "\n",
     "\n",
     "X_train, X_test, y_train, y_test = establish_split(establish_tfidf(x, **vec_kw), **tts_kw) "
    ]
@@ -2033,31 +2023,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af3f7103",
+   "id": "4502748a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def random_forest(X_train, y_train, X_test, y_test, average,**kwargs):\n",
     "    rfc = RandomForestClassifier(**kwargs)\n",
-    "\n",
     "    rfc_fitted = rfc.fit(X_train, y_train)\n",
     "\n",
     "    print(f1_score(y_test, rfc_fitted.predict(X_test), average=average))\n",
     "    # params (y_true, y_predicted)\n",
     "    print(classification_report(y_test, rfc.predict(X_test)))\n",
     "\n",
+    "def svm_cl(X_train, y_train, X_test, y_test,average, **kwargs):\n",
+    "    linear_svc = svm.SVC(**kwargs)\n",
+    "    linear_svc_fitted = linear_svc.fit(X_train, y_train)\n",
+    "    linear_svc_fitted.predict(X_test)\n",
+    "    \n",
+    "    print(f1_score(y_test, linear_svc.predict(X_test), average=average))\n",
+    "    print(classification_report(y_test, linear_svc_fitted.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af3f7103",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.44849276102645497\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.73      0.97      0.83      1205\n",
+      "                 Labour       0.74      0.45      0.56       579\n",
+      "       Liberal Democrat       0.00      0.00      0.00        67\n",
+      "Scottish National Party       0.88      0.26      0.40       170\n",
+      "\n",
+      "               accuracy                           0.73      2021\n",
+      "              macro avg       0.59      0.42      0.45      2021\n",
+      "           weighted avg       0.72      0.73      0.69      2021\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "rfkw = {\n",
     "    'random_state':26,\n",
     "    'n_estimators' : 300, \n",
     "}\n",
-    "    # 'average': 'macro'\n",
     "\n",
     "random_forest(X_train, y_train, X_test, y_test, average='macro', **rfkw)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "da9ee15c",
    "metadata": {},
    "outputs": [
@@ -2065,35 +2088,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5741880652063533\n",
+      "0.5846137591595653\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.83      0.92      0.87      1205\n",
-      "                 Labour       0.73      0.72      0.73       579\n",
-      "       Liberal Democrat       1.00      0.03      0.06        67\n",
-      "Scottish National Party       0.78      0.55      0.64       170\n",
+      "           Conservative       0.82      0.92      0.87      1205\n",
+      "                 Labour       0.72      0.68      0.70       579\n",
+      "       Liberal Democrat       0.83      0.07      0.14        67\n",
+      "Scottish National Party       0.78      0.53      0.63       170\n",
       "\n",
-      "               accuracy                           0.80      2021\n",
-      "              macro avg       0.83      0.55      0.57      2021\n",
-      "           weighted avg       0.80      0.80      0.78      2021\n",
+      "               accuracy                           0.79      2021\n",
+      "              macro avg       0.79      0.55      0.58      2021\n",
+      "           weighted avg       0.79      0.79      0.78      2021\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "def svm_cl(X_train, y_train, X_test, y_test,average, **kwargs):\n",
-    "    linear_svc = svm.SVC(**kwargs)\n",
-    "    linear_svc_fitted = linear_svc.fit(X_train, y_train)\n",
-    "    linear_svc_fitted.predict(X_test)\n",
-    "    \n",
-    "    print(f1_score(y_test, linear_svc.predict(X_test), average=average))\n",
-    "    print(classification_report(y_test, linear_svc_fitted.predict(X_test)))\n",
     "\n",
     "svmkw = {\n",
     "    'kernel': 'linear',\n",
     "    'random_state':26,\n",
     "}\n",
-    "    # 'average': 'macro' \n",
+    "\n",
     "svm_cl(X_train, y_train, X_test, y_test, average='macro',**svmkw)"
    ]
   },
@@ -2113,10 +2129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "x = df.speech\n",
-    "y = df.party\n",
-    "\n",
+    "''' establish new vector with ngrams (unigram, bigram and trigram)'''\n",
     "vec_kw={\n",
     "    'stop_words':\"english\",\n",
     "    'max_features': 3000,\n",
@@ -2128,41 +2141,57 @@
     "    'shuffle': True,\n",
     "    'stratify':y\n",
     "}\n",
-    "    \n",
     "\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = establish_split(establish_tfidf(x, **vec_kw), **tts_kw) "
+    "X_train2, X_test2, y_train2, y_test2 = establish_split(establish_tfidf(x, **vec_kw), **tts_kw) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60a95366",
+   "id": "ccad01b8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'rfc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[87]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m rfc_fitted = \u001b[43mrfc\u001b[49m.fit(X_train, y_train)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(f1_score(y_test, rfc_fitted.predict(X_test), average=\u001b[33m'\u001b[39m\u001b[33mmacro\u001b[39m\u001b[33m'\u001b[39m))\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(classification_report(y_test, rfc.predict(X_test)))\n",
-      "\u001b[31mNameError\u001b[39m: name 'rfc' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4775447410650979\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.73      0.97      0.84      1205\n",
+      "                 Labour       0.77      0.47      0.58       579\n",
+      "       Liberal Democrat       0.00      0.00      0.00        67\n",
+      "Scottish National Party       0.86      0.35      0.49       170\n",
+      "\n",
+      "               accuracy                           0.74      2021\n",
+      "              macro avg       0.59      0.45      0.48      2021\n",
+      "           weighted avg       0.73      0.74      0.71      2021\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "rf_kw = {\n",
+    "    'random_state':26,\n",
+    "    'n_estimators' : 300, \n",
+    "}\n",
     "\n",
-    "rfc_fitted = rfc.fit(X_train, y_train)\n",
-    "print(f1_score(y_test, rfc_fitted.predict(X_test), average='macro'))\n",
-    "print(classification_report(y_test, rfc.predict(X_test)))"
+    "random_forest(X_train2, y_train2, X_test2, y_test2, average='macro', **rf_kw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8b7dbbb",
+   "metadata": {},
+   "source": [
+    "Previous: 0.44849276102645497  \n",
+    "With ngrams: 0.4775447410650979"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fa706427",
+   "execution_count": 16,
+   "id": "edc1eea7",
    "metadata": {},
    "outputs": [
     {
@@ -2185,11 +2214,20 @@
     }
    ],
    "source": [
-    "linear_svc_fitted = linear_svc.fit(X_train, y_train)\n",
-    "linear_svc_fitted.predict(X_test)\n",
-    "\n",
-    "print(f1_score(y_test, linear_svc.predict(X_test), average='macro'))\n",
-    "print(classification_report(y_test, linear_svc_fitted.predict(X_test)))"
+    "svm_kw = {\n",
+    "    'kernel': 'linear',\n",
+    "    'random_state':26,\n",
+    "}\n",
+    "svm_cl(X_train2, y_train2, X_test2, y_test2, average='macro',**svm_kw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68fcc539",
+   "metadata": {},
+   "source": [
+    "Previous: 0.5846137591595653  \n",
+    "With ngrams: 0.5741880652063533"
    ]
   },
   {
