--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a990e312",
    "metadata": {},
    "outputs": [],
@@ -1259,15 +1259,19 @@
     "\n",
     "    df = df[~df.index.isin(ind)]\n",
     "    df.reset_index(inplace=True, drop=True)\n",
+    "    # to resolve unicode to utf-8\n",
+    "    punct = {\"’\": \"'\", '“': '\"', '”':'\"'}\n",
+    "    df['speech'] = df['speech'].apply(lambda x:multiple_replace(punct, x))\n",
     "    #^ - Print the dimensions of the resulting dataframe using the shape method.\n",
     "    # len(df) == 36223-28139\n",
+    "    df = csv_to_df()\n",
     "    print(df.shape)\n",
     "    return df #? Although this might not be wanted? \"Function to print and nothing else?\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "49eb3912",
    "metadata": {},
    "outputs": [
