Added functions for unicode resolve - regex

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9b39de8e",
    "metadata": {},
    "outputs": [],
@@ -1221,12 +1221,29 @@
     "from pathlib import Path\n",
     "import os\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "import re\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "def multiple_replace(dictionary,text):\n",
+    "  #ref: https://www.oreilly.com/library/view/python-cookbook/0596001673/ch03s15.html\n",
+    "  regex = re.compile(\"|\".join(map(re.escape, dictionary.keys())))\n",
+    "  # For each match, look up the corresponding value in the dictionary\n",
+    "  return regex.sub(lambda match: dictionary[match.group(0)], text)\n",
+    "\n",
+    "def remove_accents(text):\n",
+    "    import unicodedata\n",
+    "    '''t['text'] = t['speech'].apply(remove_accents)'''\n",
+    "    return ''.join(c for c in unicodedata.normalize('NFD', text) if not unicodedata.combining(c))\n",
+    "\n",
+    "encoding_dict ={'£': 'GBP ', '\\u201c': \" \",\n",
+    "    \"\\u201d\": ' ', \"%\":' percent', '%': ' percent', '\\xa0': ' ',\n",
+    "    '—':\"-\", \"’\": \"'\", '‘':\"'\", '°':' degrees', \"…\":\" \",\n",
+    "    '€':\"EURO \"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "a990e312",
    "metadata": {},
    "outputs": [],
@@ -1261,17 +1278,18 @@
     "    df.reset_index(inplace=True, drop=True)\n",
     "    # to resolve unicode to utf-8\n",
     "    punct = {\"’\": \"'\", '“': '\"', '”':'\"'}\n",
-    "    df['speech'] = df['speech'].apply(lambda x:multiple_replace(punct, x))\n",
+    "    df['speech'] = df['speech'].apply(lambda x:multiple_replace(encoding_dict, x))\n",
+    "    df['speech'] = df['speech'].apply(remove_accents)\n",
     "    #^ - Print the dimensions of the resulting dataframe using the shape method.\n",
     "    # len(df) == 36223-28139\n",
-    "    df = csv_to_df()\n",
+    "    # df = csv_to_df()\n",
     "    print(df.shape)\n",
     "    return df #? Although this might not be wanted? \"Function to print and nothing else?\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "49eb3912",
    "metadata": {},
    "outputs": [
